fix: give notifications higher z-index than tabs

--- a/assets/css/_notifications.scss
+++ b/assets/css/_notifications.scss
@@ -4,5 +4,5 @@
   position: absolute;
   right: 0;
   top: 0;
-  z-index: 900;
+  z-index: 901;
 }
